--- a/imports/client/styles/_variables.scss
+++ b/imports/client/styles/_variables.scss
@@ -1,1 +1,32 @@
-$base-font-size: 1.8rem;
+// Colors
+//$brand-primary: clear;
+$grey: #dddddd;
+$red: #db3236;
+$green: green;
+$orange: #d74e09;
+
+// Spacing
+$space: 1.4rem;
+$site-max-width: 110rem;
+
+// Font sizes
+$base-font-size: 1.4rem;
+
+// Form inputs
+$input-border: $grey;
+$input-spacing: 1rem;
+
+// Button
+//$button-bg: $brand-primary;
+//$button-color: white;
+//$button-pill-color: $brand-primary;
+//$button-secondary-bg: #f9f9f9;
+//$button-secondary-color: #777777;
+//$button-secondary-border-color: $grey;
+
+// Header
+//$header-bg: $brand-primary;
+//$header-color: white;
+
+// Header Item
+$item-border-height: 2px;
